# Rataplay

./: CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  config.toml
.github/workflows/: main.yml
src/: cli.rs  main.rs
src/app/: actions.rs  app.rs  handlers.rs  mod.rs  state.rs  updates.rs
src/model/: download.rs  local.rs  mod.rs  settings.rs
src/sys/: config.rs  cookies.rs  deps.rs  download.rs  image.rs  local.rs  logging.rs  media.rs  mod.rs  mpv_ipc.rs  process.rs  yt.rs
src/tui/: mod.rs
src/tui/components/: action_menu.rs  downloads.rs  format_selection.rs  logo.rs  main_content.rs  mod.rs  pet.rs  playback_bar.rs  search_bar.rs  settings.rs  status_bar.rs  theme.rs  widgets.rs
