[package]
name = "rataplay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
ratatui-image = "1.0.5"
image = "0.25.5" # Underlying image crate for ratatui-image
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
regex = "1.11.1" # For parsing versions etc
chrono = "0.4.39" # For date comparison (yt-dlp version check)
