[package]
name = "rataplay"
version = "1.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
image = "0.25.5" # Underlying image crate for ratatui-image
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
regex = "1.11.1" # For parsing versions etc
chrono = "0.4.43" # For date comparison (yt-dlp version check)
ratatui-image = { version = "10.0.2", default-features = false, features = ["image-defaults", "crossterm"] } # Builds without chafa installation
once_cell = "1.19.0"
lru = "0.12.3"
libc = "0.2.155"
souvlaki = "0.7.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true



