[package]
name = "rataplay"
version = "1.4.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "net", "fs", "signal"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] } 
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
toml = { version = "0.8.19", default-features = false, features = ["parse", "display"] }
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] } 
ratatui-image = { version = "10.0.2", default-features = false, features = ["crossterm"] } 
lru = "0.12.3"
libc = "0.2.155"
souvlaki = "0.7.3"
directories = "6.0.0"
arboard = "3.4.1"
webbrowser = "1.0.1"
log = "0.4"
fern = { version = "0.7", features = ["colored"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 16
panic = "abort"
strip = true


